--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,11 @@
           <div class="row">
             <div class="col c12">
               <div id="dropzone">
+                <!-- START-DRAG-DROP-DOM-TO-REMOVE-FROM-VAULT -->
+
                 <div id="dropAfterMe"></div>
+
+                <!-- END-DRAG-DROP-DOM-TO-REMOVE-FROM-VAULT -->
               </div>
             </div>
           </div>
