--- a/app/index.html
+++ b/app/index.html
@@ -172,6 +172,18 @@
 
   </div>
 
+  <div class="footer">
+    <div class="footer-container">
+      <span>
+        <a href="https://github.com/hypervault">Github</a> |
+        <a href="#">About</a> |
+        <a href="#">Help</a>
+      </span>
+      <hr />
+      <span>Project by <a href="http://calebmadrigal.com">Caleb Madrigal</a></span>
+    </div>
+  </div>
+
 </div>
 
 
