Added 'drag files here' message.

--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,9 @@
           <div class="row">
             <div class="col c12">
               <div id="dropzone">
+                <div id="drag-files-here-msg">
+                  <span>Drag files here <br />(or select with the button below)</span>
+                </div>
                 <div id="dropAfterMe"></div>
               </div>
             </div>
