--- a/app/index.html
+++ b/app/index.html
@@ -140,7 +140,7 @@
 
         <div class="row">
           <div class="col c12">
-            <button class="btn floatLeft" onclick="decryptAndDownload();return false;">Decrypt</button>
+            <button class="btn floatLeft" onclick="decryptVault();return false;">Decrypt</button>
             <div class="progress">
               <div class="percent" id="decrypt-percent"></div>
               <svg class="progress-circle" width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet" class="svg-content">
@@ -166,6 +166,9 @@
       <div class="col c1">&nbsp;</div>
 
       <div class="col c7">
+        <div id="decrypt-helper-message">
+          <span class="thinRed">Enter the password to unlock this hypervault.</span>
+        </div>
         <div id="decrypted-files">
           <div id="add-after-me"></div>
         </div>
