Added download vault button instead of automatically starting the download of the vault when complete.

--- a/app/index.html
+++ b/app/index.html
@@ -86,6 +86,10 @@
             <div class="password-control-field">
               <div id="encrypt-progress-summary"></div>
             </div>
+
+            <div class="password-control-field">
+              <button type="button" id="download-vault" class="btn" onclick="downloadLockedVault();return false;">Download vault</button>
+            </div>
           </div>
         </div>
       </div>
