Added download icon.

--- a/app/index.html
+++ b/app/index.html
@@ -27,10 +27,28 @@
 <div class="outer">
   <div class="container encryption-container">
 
+
+
     <div class="row">
-      <div class="col c10">
+      <div class="col c11">
         <h1 class="title">Hypervault</h1>
       </div>
+
+
+      <!--<div class="col c1" style="text-align: center;">-->
+        <!--<a id="download-hypervault-link" href="#">-->
+          <!--<svg id="download-hypervault-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0" width="30" height="30" viewBox="0, 0, 100, 100">-->
+            <!--<g id="Layer_1">-->
+              <!--<path d="M50.5,7.5 L50.5,82.5" fill-opacity="0" stroke="#FF4136" stroke-width="4"/>-->
+              <!--<path d="M49.5,82.5 L80.5,45.5" fill-opacity="0" stroke="#FF4136" stroke-width="4"/>-->
+              <!--<path d="M51.5,82.5 L20.5,45.5" fill-opacity="0" stroke="#FF4136" stroke-width="4"/>-->
+              <!--<path d="M20.5,92.5 L80.5,92.5" fill-opacity="0" stroke="#FF4136" stroke-width="4"/>-->
+            <!--</g>-->
+          <!--</svg>-->
+
+        <!--</a>-->
+      <!--</div>-->
+
     </div>
 
     <form name="uploadForm">
