Added password message

--- a/app/index.html
+++ b/app/index.html
@@ -83,6 +83,9 @@
         <div class="col c4 password-control-container">
 
           <div class="password-control-group">
+            <div class="password-control-field choose-password-msg">
+              Choose a vault password
+            </div>
 
             <div class="password-control-field">
               <input type="password" name="password_input" id="password_input" placeholder="Password"
