Added an intro message.

--- a/app/index.html
+++ b/app/index.html
@@ -27,11 +27,13 @@
 <div class="outer">
   <div class="container encryption-container">
 
-
-
     <div class="row">
-      <div class="col c11">
+      <div class="col c5">
         <h1 class="title">Hypervault</h1>
+      </div>
+
+      <div class="col c7">
+        <p class="intro-text">Hypervault is a file encryption app. It outputs a distributable vault with your encrypted files locked inside.</p>
       </div>
 
 
