Minor text tweak

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
       </div>
 
       <div class="col c7">
-        <p class="intro-text">Hypervault is a file encryption app. It outputs a distributable vault with your encrypted files locked inside.</p>
+        <p class="intro-text">Hypervault is a file encryption app. It outputs a password-locked vault with your encrypted files locked inside.</p>
       </div>
 
 
