Added FAQ page.

--- a/app/index.html
+++ b/app/index.html
@@ -231,9 +231,9 @@
 <div class="footer">
   <div class="footer-container">
       <span>
+        <a href="index.html">Home</a> |
         <a href="https://github.com/hypervault">Github</a> |
-        <a href="#">About</a> |
-        <a href="#">Help</a>
+        <a href="about.html">FAQ</a>
       </span>
     <hr />
     <span>Project by <a href="http://calebmadrigal.com">Caleb Madrigal</a></span>
