--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
 
     <div class="row">
       <div class="col c5">
-        <h1 class="title">Hypervault</h1>
+        <h1 class="title"><a href="index.html">Hypervault</a></h1>
       </div>
 
       <div class="col c7">
